--- a/css/main.css
+++ b/css/main.css
@@ -99,12 +99,15 @@ body{
     margin: 0 auto;
 }
 .info{
-    font-size: 50px;
+    font-size: 40px;
+    text-align: center;
 }
 .desc{
-    font-size: 15px;
+    font-size: 12px;
     color: gainsboro;
     font-weight: 700;
+    text-align: center;
+
 }
 .tit{
     color: rgba(175, 84, 9, 0.952);
@@ -116,7 +119,9 @@ body{
     width: 80%;
     margin: 0 auto;
 }
-
+.column {
+    padding: 10px;
+}
 .map{
     position:relative;
     text-align: center;
@@ -170,7 +175,217 @@ footer{
     margin-top: 40px;
 }
 
+/* Slider-Container */
+.slider-container {
+    position: relative;
+    width: 900px;
+    height: 600px;
+    border: 2px solid white;
+    margin: 0 auto;
+    margin-top: 50px;
 
+  }
+  .container .img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: 900px 100%;
+  }
+  .container .background-img {
+    background-image: url("https://i.ibb.co/7kkvXtL/after.jpg");
+    background-size: cover;
+  }
+  .container .foreground-img {
+    background-image: url("https://i.ibb.co/y4VmzsD/before.jpg");
+    width: 50%;
+    background-size: cover;
+
+  }
+  .container .slider {
+    position: absolute;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 100%;
+    background: rgba(242, 242, 242, 0.3);
+    outline: none;
+    margin: 0;
+    transition: all 0.2s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container .slider:hover {
+    background: rgba(242, 242, 242, 0.1);
+  }
+  .container .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 1px;
+    height: 600px;
+    cursor: pointer;
+  }
+  .container .slider::-moz-range-thumb {
+    width: 1px;
+    height: 600px;
+    background: white;
+    cursor: pointer;
+  }
+  .container .slider-button {
+    pointer-events: none;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 1px;
+    left: calc(50% - 18px);
+    top: calc(50% - 18px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container .slider-button:after {
+    content: "";
+    padding: 3px;
+    display: inline-block;
+    border: solid #5d5d5d;
+    border-width: 0 2px 2px 0;
+    transform: rotate(-45deg);
+  }
+  .container .slider-button:before {
+    content: "";
+    padding: 3px;
+    display: inline-block;
+    border: solid #5d5d5d;
+    transform: rotate(135deg);
+  }
+  .slider-after {
+    position: absolute;
+    left: 600px;
+    top: 20px;
+    background: black;
+    font-size: 30px;
+    border: 1px solid white;
+    padding: 5px;
+    width: 150px;
+    text-align: center;
+  }
+  .slider-before {
+    position: absolute;
+    background: black;
+    padding: 5px;
+    width: 150px;
+    text-align: center;
+    font-size: 30px;
+    border: 1px solid white;
+    left: 140px;
+    top: 20px;
+}
+.subscribe{
+    background-image: url('https://i.ibb.co/BZVhcpH/subscribe-banner.png');
+    padding: 70px;
+    margin-top: 50px;
+    background-repeat:no-repeat;
+    background-size: cover;
+}
+.subscribe-form {
+    text-align: center;
+    margin-top: 50px;
+}
+
+input#subscribe-email {
+    width: 300px;
+    height: 50px;
+    border: none;
+    padding: 10px;
+    font-family: 'Poppins';
+}
+button.btn.subscribe__submit {
+    width: 100px;
+    height: 50px;
+    margin-left: -7px;
+    background-color:  rgba(175, 84, 9, 0.952);
+    border: none;
+    color: white;
+    font-family: 'Poppins';
+    font-weight: 600;
+}
+.accordion-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 50px;
+}
+.acc-container {
+    width: 100%;
+}
+.acc-one {
+    padding: 20px;
+    width: 50%;
+}
+.acc-two {
+    padding: 20px;
+    width: 50%;
+
+} 
+.acc {
+    margin-bottom: 10px;
+}
+
+.acc-head {
+    background-color: rgb(48, 47, 47);
+    padding: 15px 10px;
+    font-size: 22px;
+    position: relative;
+    cursor: pointer;
+    border-bottom: 3px solid rgba(175, 84, 9, 0.952);
+}
+.acc-title{
+    color: rgba(175, 84, 9, 0.952) ;
+}
+
+.acc-head::before,
+.acc-head::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    background-color: rgba(175, 84, 9, 0.952);
+    transition: all .3s;
+}
+
+.acc-head::before {
+    right: 30px;
+    width: 3px;
+    height: 20px;
+    margin-top: -10px;
+}
+
+.acc-head::after {
+    right: 21px;
+    width: 20px;
+    height: 3px;
+    margin-top: -2px;
+}
+
+.acc-head p {
+    color: rgba(175, 84, 9, 0.952);
+    font-weight: 600;
+}
+
+.acc-content {
+    padding: 15px 10px;
+    display: none;
+}
+.acc-content p{
+    font-weight: lighter;
+    font-family: 'Poppins', sans-serif;
+}
+        
+.acc-head.active::before {
+    transform: rotate(90deg);
+}
+  
 
 @media only screen and (max-width: 900px) {
     .site-nav-menu {
@@ -185,6 +400,11 @@ footer{
         border-top: 1px solid #4a4848;
         clip-path: circle(0% at 100% 0%);
         transition: all .8s;
+        z-index: 999;
+    }
+    .banner{
+        width: 100%;
+        height: 100%;
     }
     .primary-menu{
         display: flex;
@@ -221,6 +441,56 @@ footer{
     .map{
         width: 300;
         
+    }
+    .slider-container{
+        width: 450px;
+        height: 300px;
+    }
+    .slider-before {
+        position: absolute;
+        background: black;
+        padding: 5px;
+        width: 90px;
+        text-align: center;
+        font-size: 15px;
+        border: 1px solid white;
+        left: 65px;
+        top: 20px;
+    }
+    .slider-after {
+        position: absolute;
+        left: 290px;
+        top: 20px;
+        background: black;
+        font-size: 15px;
+        border: 1px solid white;
+        padding: 5px;
+        width: 90px;
+        text-align: center;
+    }
+    input#subscribe-email{
+        width: 230px !important;
+    }
+    .accordion-container {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .acc-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .acc-one{
+        width: 100%;
+    }
+    .acc-two{
+        width: 100%;
+    }
+    .acc-head{
+        font-size: 15px;
+    }
+    .acc-content p{
+        font-size: 13px;
     }
     .site-footer{
         display: flex;
